bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: Missing closing brace `}' assumed here
while (estSurMessage())
^BDR:4: error: '(' expected but '{' found.
} else if { if (litMessage() == "Z") {
          ^BDR:9: error: illegal start of simple expression
	}
        ^